--- a/docs/NCC_coverLetter-concordance.tex
+++ b/docs/NCC_coverLetter-concordance.tex
@@ -1,1 +1,2 @@
-\Sconcordance{concordance:NCC_coverLetter.tex:NCC_coverLetter.Rnw:1 32 1 1 0 28 1}
+\Sconcordance{concordance:NCC_coverLetter.tex:NCC_coverLetter.Rnw:%
+1 32 1 1 0 30 1}
