--- a/docs/phen_framing.Rnw
+++ b/docs/phen_framing.Rnw
@@ -295,7 +295,7 @@ Budset represents the stop of primary growth and generally correlates strongly w
 %
 %  Our results suggest that earlier leafout may have little effect on the thermal growing season because of unfavorably low temperatures combined with the observed correlation between leafout and budset (Figure \ref{fig:vapar}).% ADDcites? from noeviany in whathappened.R in grephon repo
 
-Our multi-species common garden study showed that earlier leafout does not extend their thermal growing season---a proxy for potential carbon uptake period---despite extending the calendar growing season.  Given that photosynthesis is limited by cold temperatures in early spring, earlier leafout appears to provide limited opportunity for substantial growth and may especially deprive early-leafing species from fully using late-season warmth. While this may explain why multiple studies have failed to find correlations between longer calendar seasons and increased plant growth \citep{cufar2015variations,dow2022warm,silvestro2023longer}, it generates a new question of why any species leafs out when thermal conditions are unfavorable. 
+Our multi-species common garden study showed that earlier leafout does not extend their thermal growing season---a proxy for potential carbon uptake period---despite extending the calendar growing season.  Given that photosynthesis is limited by cold temperatures in early spring, earlier leafout appears to provide limited opportunity for substantial growth and may especially deprive early-leafing species from fully using late-season warmth. While this may explain why multiple studies have failed to find correlations between longer calendar seasons and increased plant growth \citep{dow2022warm,silvestro2023longer}, it generates a new question of why any species leafs out when thermal conditions are unfavorable. 
 % Our results suggest little advantage from a carbon or primary productivity perspective for leafing out too early in the season, as thermal conditions are not favorable for photosynthesis and assimilation. % Cut for space:  Many of the species that are most phenologically sensitive to climate change are already among the earliest species to leaf out in temperate plant communities \citep{Shen2014,Geng2020}, implying there may be little to gain from a carbon perspective.
 Varying light availability over the early season combined with different plant strategies may alter this equation, however, potentially making this a successful strategy for some species. Supporting this, we found understory species often showed the strongest relationship, suggesting they leaf out in thermally poor conditions to maximize access to light before the upper canopy closes. 
 
