--- a/docs/phen_framing.tex
+++ b/docs/phen_framing.tex
@@ -134,15 +134,15 @@ early calendar growing seasons led to lower---cooler---thermal growing seasons (
 % emw6Nov2025 -- I cut the below point because I think it is best explained in the figure (and would take more words here to explain)
 % ', and a relatively small advance in calendar time resulting in a proportionately larger gain in thermal sums'
 Differences between thermal and calendar growing seasons were strongest in the earlier-leafout species, which leaf out during the coolest part of the spring (Figure \ref{fig:cool1}-\ref{fig:vapar}). For later leafing species, earlier leafout did not substantially reduce their thermal growing season, bit it also did not increase it---suggesting thermal seasons do not increase with calendar growing seasons for any of our studied species. Species was the a major predictor of variation in leafout and budset% and growing season length 
-($\sigma_{species}$ days for leafout: $8.1, $UI_{90}$[5.5, 11.6], days for budset: 9.7, $UI_{90}$[7, 13.6]).% days for season length: 14.4 $UI_{90}$[10.3,19.9).
+($\sigma_{species}$ days for leafout: $8.2, $UI_{90}$[5.6, 11.7], days for budset: 9.8, $UI_{90}$[7, 13.5]).% days for season length: 14.5 $UI_{90}$[10.4,19.7).
 
 % Our results showed only small differences in the full season, measured across species and populations in calendar days (Figure \ref{fig:vapar}c) ...
 These results suggest that some of the apparently conflicting recent findings of whether longer seasons increase growth or productivity may be due to different scales of observation, including the different species they integrate over. Our result that individual trees appear to accelerate their end of season events with earlier start of season events supports other studies conducted on a small number of species \citep[using alternative metrics of senescence,][]{Liu2016,Zani2020}. Thus, we may expect that studies of individual trees could find little relationship between earlier leafout and growth \citep{cuny2012life,michelot2012comparing,Zani2020}, which could be driven by currently unstudied shifts in the thermal seasons. Additionally, because differences between thermal and calendar growing seasons were species-dependent, previous findings may depend on the species studied \citep{cuny2012life,michelot2012comparing}. This cross-species variation  likely scales up to affect ecosystem-level estimates, which generally have one measure of the start of season---for the earliest leafout species---and one for the end of season, likely capturing the later-leafout species. % given the correlations we found between start and end of season events. % Cut for space: Thus, by integrating across species some studies may find stronger correlations between productivity and earlier seasons. 
 
 % emw6Nov2025 -- avoid 'plastic' here as some would not use the word the way we do ... 
 % emw6Nov2025 -- save words by not naming the sites
-Beyond species-level variation, we found high variation across years in both leafout and budset. We expected large differences across years in leafout ($\sigma_{year}$: 10.7 days, $UI_{90}$[4.9, 20.9], Figure \ref{fig:vapar}b), because it varies strongly with local climatic conditions---one of the reasons it is the most consistent biological indicator of anthropogenic climate change \citep{ipcc2022}. In line with this, we also found little variation across populations in leafout ($\sigma_{population}$: 0.6 days, $UI_{90}$[0, 1.8], Figure \ref{fig:vapar}a). Yet our finding of 15 days of variation across years in budset was surprising (\sigma_{year}$: 15 days, $UI_{90}$[6.4, 30.8], Figure \ref{fig:vapar}b) because budset is generally thought to be strongly locally adapted and controlled by photoperiod, which does not vary year to year \citep{soolanayakanahally2013timing,aitken2016}. %dl15Nov2025: I would specify "local adaptation in budset" just to help the reader stay focused
-We did find evidence of local adaptation ($\sigma_{population}$: 2.3 days, $UI_{90}$[0.4, 6.1], Figure \ref{fig:vapar}a), with populations from the site with the fewest frost free days (FFD, Figure \ref{fig:ffd}) setting buds approximately two days before the site with next fewest FFD. These differences, however, were weak (Figure \ref{fig:vapar}a) and 7X and 4X smaller than the variation due to year and species (respectively). 
+Beyond species-level variation, we found high variation across years in both leafout and budset. We expected large differences across years in leafout ($\sigma_{year}$: 10.6 days, $UI_{90}$[4.8, 21.2], Figure \ref{fig:vapar}b), because it varies strongly with local climatic conditions---one of the reasons it is the most consistent biological indicator of anthropogenic climate change \citep{ipcc2022}. In line with this, we also found little variation across populations in leafout ($\sigma_{population}$: 0.6 days, $UI_{90}$[0, 1.9], Figure \ref{fig:vapar}a). Yet our finding of 15 days of variation across years in budset was surprising (\sigma_{year}$: 15.1 days, $UI_{90}$[6.2, 31], Figure \ref{fig:vapar}b) because budset is generally thought to be strongly locally adapted and controlled by photoperiod, which does not vary year to year \citep{soolanayakanahally2013timing,aitken2016}. %dl15Nov2025: I would specify "local adaptation in budset" just to help the reader stay focused
+We did find evidence of local adaptation ($\sigma_{population}$: 2.4 days, $UI_{90}$[0.4, 6.4], Figure \ref{fig:vapar}a), with populations from the site with the fewest frost free days (FFD, Figure \ref{fig:ffd}) setting buds approximately two days before the site with next fewest FFD. These differences, however, were weak (Figure \ref{fig:vapar}a) and 6X and 4X smaller than the variation due to year and species (respectively). 
 
 % emw6Nov2025 -- CUTREFS: Olsen2014, vico2021
 The shift in budset with earlier leafout suggests a potential pathway to better understand and predict recent findings, given additional research. While most work on budset has stressed the role of photoperiod \citep{soolanayakanahally2013timing}, other studies have found evidence of temperature control \citep{Rohde2011,Michelson2018}. Our results suggest an additional potential role of leafout timing, which could be confounded with temperature. Teasing apart these potential cues while also testing these relationships for other end of season events could help resolve connections between start and end of season events with growth. While we found similar findings using leaf coloring, there are many ways that plants transition from growth to dormancy each year \citep{Michelson2018}---with different implications for carbon gain \citep{Korner2023}.
@@ -166,7 +166,7 @@ Budset represents the stop of primary growth and generally correlates strongly w
 %
 %  Our results suggest that earlier leafout may have little effect on the thermal growing season because of unfavorably low temperatures combined with the observed correlation between leafout and budset (Figure \ref{fig:vapar}).% ADDcites? from noeviany in whathappened.R in grephon repo
 
-Our multi-species common garden study showed that earlier leafout does not extend their thermal growing season---a proxy for potential carbon uptake period---despite extending the calendar growing season.  Given that photosynthesis is limited by cold temperatures in early spring, earlier leafout appears to provide limited opportunity for substantial growth and may especially deprive early-leafing species from fully using late-season warmth. While this may explain why multiple studies have failed to find correlations between longer calendar seasons and increased plant growth \citep{cufar2015variations,dow2022warm,silvestro2023longer}, it generates a new question of why any species leafs out when thermal conditions are unfavorable. 
+Our multi-species common garden study showed that earlier leafout does not extend their thermal growing season---a proxy for potential carbon uptake period---despite extending the calendar growing season.  Given that photosynthesis is limited by cold temperatures in early spring, earlier leafout appears to provide limited opportunity for substantial growth and may especially deprive early-leafing species from fully using late-season warmth. While this may explain why multiple studies have failed to find correlations between longer calendar seasons and increased plant growth \citep{dow2022warm,silvestro2023longer}, it generates a new question of why any species leafs out when thermal conditions are unfavorable. 
 % Our results suggest little advantage from a carbon or primary productivity perspective for leafing out too early in the season, as thermal conditions are not favorable for photosynthesis and assimilation. % Cut for space:  Many of the species that are most phenologically sensitive to climate change are already among the earliest species to leaf out in temperate plant communities \citep{Shen2014,Geng2020}, implying there may be little to gain from a carbon perspective.
 Varying light availability over the early season combined with different plant strategies may alter this equation, however, potentially making this a successful strategy for some species. Supporting this, we found understory species often showed the strongest relationship, suggesting they leaf out in thermally poor conditions to maximize access to light before the upper canopy closes. 
 
@@ -206,7 +206,7 @@ Understanding whether thermal responses are consistent across species with diffe
  \includegraphics[width=.6\textwidth]{..//analyses/figures/finalfigure1.png} 
     
   \begin{singlespace}  
-    \caption{The relationship between leafout timing and growing season length differs between the calendar and the thermal growing seasons. Panels (a) and (b) conceptually demonstrate the expected relationships between leafout timing and both calendar and thermal growing seasons under two different expectations, with (a) showing the expectation that longer seasons lead to increased carbon storage, while panel (b) shows the expectation that plant dynamically adjust the end of their growing season such that longer growing seasons do not increase carbon storage. In our study, later leafout resulted in a shorter calendar growing season (median estimated effect: -0.4 days, $UI_{90}[-0.7,-0.2]$) (c) and this pattern was consistent across species in our study (d). In contrast, later leafout resulted in a longer thermal growing season (median estimates effect: 5.3 growing-degree days, $UI_{90}[2.1,8.4]$) (d), an effect that was stronger for species that typically leafout earlier in the season---panels in (d) display in the typical order of leafout among species. The black trend lines represent the median effect of leafout timing on growing season length and shaded region 90\% uncertainty intervals. Points in (c) represent the raw data (per individual tree per year).}
+    \caption{The relationship between leafout timing and growing season length differs between the calendar and the thermal growing seasons. Panels (a) and (b) conceptually demonstrate the expected relationships between leafout timing and both calendar and thermal growing seasons under two different expectations, with (a) showing the expectation that longer seasons lead to increased carbon storage, while panel (b) shows the expectation that plant dynamically adjust the end of their growing season such that longer growing seasons do not increase carbon storage. In our study, later leafout resulted in a shorter calendar growing season (median estimated effect: -0.4 days, $UI_{90}[-0.7,-0.2]$) (c) and this pattern was consistent across species in our study (d). In contrast, later leafout resulted in a longer thermal growing season (median estimates effect: 5.4 growing-degree days, $UI_{90}[2.2,8.5]$) (d), an effect that was stronger for species that typically leafout earlier in the season---panels in (d) display in the typical order of leafout among species. The black trend lines represent the median effect of leafout timing on growing season length and shaded region 90\% uncertainty intervals. Points in (c) represent the raw data (per individual tree per year).}
     \end{singlespace}
     \label{fig:cool1}
 \end{figure}
