added line numbers & word count

--- a/docs/NCC_coverLetter.Rnw
+++ b/docs/NCC_coverLetter.Rnw
@@ -18,7 +18,7 @@
  \textwidth 16.59cm
  \textheight 21.94cm 
  \parskip 7.2pt 
-\renewcommand{\baselinestretch}{1}
+\renewcommand{\baselinestretch}{1.1}
 %\AtBeginEnvironment{thebibliography}{\linespread{1}\selectfont}
 \parindent 0pt
 \usepackage{lineno}
@@ -38,20 +38,18 @@
 \noindent\includegraphics[width=0.2\textwidth]{logo.jpg}
 \pagenumbering{gobble}
 \\\\
-\noindent{Dear Dr. ,}
+\noindent{Dear Dr. Wake,}
 \vspace{1.5ex}
 
 \noindent Please consider this manuscript ``Early leafout leads to cooler growing seasons in woody species" as a Brief Communication in \textit{Nature Climate Change}. We report on three years of new rarely-available plant-level data that shows that earlier leafout leads to shorter thermal growing seasons with implications for how climate change may alter plant growth and carbon storage. 
 
-\noindent Most models of carbon storage assume that earlier growth will result in longer seasons and increase terrestrial carbon sequestration in forests, yet recent findings have challenged this pivotal assumption \citep{dow2022warm,silvestro2023longer}. New work has suggested that plants may dynamically adjust the end of their growing season based on their carbon-sink capacity \citep{Zani2020,Zohner2023}, but these findings are limited, jumping from single species studies of potted plants to remotely sense ecosytem measures, and lacking mechanistic link between these scales. These results are all based on the assumption/idea that variation in the calendar growing season (number of days) should be independent of variation in the thermal growing season (i.e., the period of favorable meteorological conditions for plant growth) \citep{Korner2023}, which should remain relatively stable across years. This, however, has not been tested given the paucity of start and end of season phenological events for adult trees. 
+\noindent Most models of carbon storage assume that earlier growth will result in longer seasons and increase terrestrial carbon sequestration in forests, yet recent findings have challenged this pivotal assumption \citep{dow2022warm,silvestro2023longer}. New work has suggested that plants may dynamically adjust the end of their growing season based on their carbon-sink capacity \citep{Zani2020,Zohner2023}, but these findings are limited, jumping from single species studies of potted plants to remotely sense ecosytem measures, and lacking mechanistic link between these scales. These results are all based on the idea that variation in the calendar growing season (number of days) should be independent of variation in the thermal growing season (i.e., the period of favorable meteorological conditions for plant growth) \citep{Korner2023}, which should remain relatively stable across years. This, however, has not been tested given the paucity of start and end of season phenological events for adult trees. 
 
-\noindent Here we report on new data from a multi-species common garden that shows longer calendar growing seasons lead to shorter---cooler---growing seasons. Our results are based on rarely available plant-scale phenological measurements from three years across 13 woody species, all native and co-occurring in Eastern United States forests and sampled from four sites spanning 3.5 degree latitude. 
-
-\noindent In this study, we found that earlier leafout lead to earlier growth cessation (budset), indicating woody plants do adjust their cessation of growth dynamically, raising major questions about the widespead assumption that budset is locally adapted and driven by photoperiod \citep{soolanayakanahally2013timing}.  Surprisingly, we found that earlier leafout was associated with shorter thermal growing seasons. This is because due to the correlation between leafout and budset, the thermal time gained by early leafout does not offset thermal time lost by the earlier budset as thermal conditions in the early spring are less optimal than in the end of the growing season. This finding offers a mechanistic explanation about why multiple studies have failed to find correlations between longer calendar seasons and increased plant growth \citep{dow2022warm,silvestro2023longer}. At the same time, our study generates new questions about why any species leafout early when thermal conditions are unfavorable for photosynthesis. 
+\noindent Here we report on new data from a multi-species common garden that shows longer calendar growing seasons lead to shorter (i.e., cooler) thermal growing seasons. We observed that earlier leafout lead to earlier growth cessation (budset), and due to this correlation, the thermal time gained by early leafout does not offset thermal time lost by the earlier budset as thermal conditions in the early spring are less optimal, resulting in a shorter thermal season. Our results are based on rarely available plant-scale phenological measurements from three years across 13 woody species, all native and co-occurring in Eastern United States forests and sampled from four sites spanning 3.5 degree latitude. This finding offers a mechanistic explanation about why multiple studies have failed to find correlations between longer calendar seasons and increased plant growth \citep{dow2022warm,silvestro2023longer}. At the same time, our study generates new questions about why any species leafout early when thermal conditions are unfavorable for photosynthesis, and raises major questions about the widespead assumption that budset is locally adapted and driven by photoperiod. 
 
 
-\noindent We believe this work would be of broad interest to the readers of \textit{Nature Climate Change}. Our study addresses a timely debate in the field of climate change ecology, and help explain some of the contrasting results of how climate change affects growing season length and productivity. We show how species-levels responses scale up to community level patterns which identifies a clear path forward for improving how phenology is intigrated into model of carbon storage. Following the guideliens for a Brief Communication in \textit{Nature Climate Change}, the main text of this manuscript is X words in length and it contains 2 figures. It is co-authored by C.J. Chamberlain, Deirdre Loughnan abd E.M. Wolkovich and is not under consideration elsewhere. We hope that you will find it suitable for publication in \textit{Nature Climate Change}, and look forward to hearing from you.\\\\ 
-\\Sincerely,\\\\\\\\
+\noindent We believe this work would be of broad interest to the readers of \textit{Nature Climate Change}. Our study addresses a timely debate in the field of climate change ecology, and help explain some of the contrasting results of how climate change affects growing season length and productivity. We show how species-levels responses scale up to community level patterns which identifies a clear path forward for improving how phenology is integrated into model of carbon storage. Following the guidelines for a Brief Communication in \textit{Nature Climate Change}, the main text of this manuscript is 1461 words in length and it contains 2 figures. It is co-authored by C.J. Chamberlain, Deirdre Loughnan abd E.M. Wolkovich and is not under consideration elsewhere. We hope that you will find it suitable for publication in \textit{Nature Climate Change}, and look forward to hearing from you.\\\
+\\Sincerely,\\\\\\
 
 \noindent Daniel Buonaiuto\\
 
