--- a/docs/phen_framing.Rnw
+++ b/docs/phen_framing.Rnw
@@ -22,7 +22,7 @@
 %\AtBeginEnvironment{thebibliography}{\linespread{1}\selectfont}
 \parindent 0pt
 \usepackage{lineno}
-%\linenumbers % for dissertation
+\linenumbers % for dissertation
 
 \usepackage{xr-hyper}
 \usepackage{hyperref}
