Updated cover letter

--- a/docs/NCC_coverLetter.Rnw
+++ b/docs/NCC_coverLetter.Rnw
@@ -2,6 +2,8 @@
 \usepackage{graphicx}
 \usepackage{tabularx}
 \usepackage{natbib}
+\usepackage{gensymb}
+
 
 \usepackage{array}
 \usepackage{amsmath}
@@ -41,14 +43,18 @@
 \noindent{Dear Dr. Wake,}
 \vspace{1.5ex}
 
-\noindent Please consider this manuscript ``Early leafout leads to cooler growing seasons in woody species" as a Brief Communication in \textit{Nature Climate Change}. We report on three years of new rarely-available plant-level data that shows that earlier leafout leads to shorter thermal growing seasons with implications for how climate change may alter plant growth and carbon storage. 
+\noindent Please consider this manuscript ``Early leafout leads to cooler growing seasons in woody species" as a Brief Communication in \textit{Nature Climate Change}. We show that longer growing seasons in calendar days lead to shorter thermal growing seasons in woody plants, with implications for how climate change may alter plant growth and carbon storage. 
+% emw: I like the below but am cutting it as it's repetitive; we could alternative cut the second to last paragraph. 
+% We show that longer growing seasons in calendar days lead to shorter thermal growing seasons. These results help explain some of the contrasting results of how climate change affects growing season length and productivity, and challenge current dogma on the drivers of growth cessation in woody plant with implications for how climate change may alter plant growth and carbon storage. 
 
-\noindent Most models of carbon storage assume that earlier growth will result in longer seasons and increase terrestrial carbon sequestration in forests, yet recent findings have challenged this pivotal assumption \citep{dow2022warm,silvestro2023longer}. New work has suggested that plants may dynamically adjust the end of their growing season based on their carbon-sink capacity \citep{Zani2020,Zohner2023}, but these findings are limited, jumping from single species studies of potted plants to remotely sense ecosystem measures, and lacking mechanistic link between these scales. These results are all based on the idea that variation in the calendar growing season (number of days) should be independent of variation in the thermal growing season (i.e., the period of favorable meteorological conditions for plant growth) \citep{Korner2023}, which should remain relatively stable across years. This, however, has not been tested given the paucity of start and end of season phenological events for adult trees. 
+\noindent Most models of carbon storage assume that earlier growth will result in longer seasons and increase terrestrial carbon sequestration, yet recent findings have challenged this pivotal assumption \citep{dow2022warm,silvestro2023longer}. New work has suggested that woody plants may dynamically adjust the end of their growing season based on their carbon-sink capacity \citep{Zani2020,Zohner2023}, but these findings come from single species experiments on juvenile trees and could easily be explained by common artifacts \citep[i.e., `pot' effects,][]{norby2021comment}. Further, they assume that variation in the calendar growing season (number of days) should be independent of variation in the thermal growing season \citep[i.e., the period of favorable meteorological conditions for plant growth,][]{Korner2023}. This, however, has not been tested given the paucity of start and end of season phenological events for adult trees. 
 
-\noindent Here we report on new data from a multi-species common garden that shows longer calendar growing seasons lead to shorter (i.e., cooler) thermal growing seasons. We observed that earlier leafout lead to earlier growth cessation (budset), and due to this correlation, the thermal time gained by early leafout does not offset thermal time lost by the earlier budset as thermal conditions in the early spring are less optimal, resulting in a shorter thermal season. Our results are based on rarely available plant-scale phenological measurements from three years across 13 woody species, all native and co-occurring in Eastern United States forests and sampled from four sites spanning 3.5 degree latitude. This finding offers a mechanistic explanation about why multiple studies have failed to find correlations between longer calendar seasons and increased plant growth \citep{dow2022warm,silvestro2023longer}. At the same time, our study generates new questions about why any species leafout early when thermal conditions are unfavorable for photosynthesis, and raises major questions about the widespread assumption that budset is locally adapted and driven by photoperiod. 
+\noindent Here we report on new data from a multi-species, multi-population common garden that shows longer calendar growing seasons lead to shorter (i.e., cooler) thermal growing seasons. We found that earlier leafout leads to earlier growth cessation (budset, similar results found with leaf colouring), causing longer calendar growing seasons to actually be shorter (cooler) thermal growing seasons. Because thermal conditions in the early spring are far less optimal than later-season conditions, we show that the thermal time gained by early leafout was not offset by the thermal time lost by earlier budset. Our results are based on rarely available plant-scale phenological measurements from three years across 13 woody species, all native and co-occurring in Eastern United States forests, and sampled from four populations spanning 3.5\degree  latitude. 
 
+\noindent Our findings offer a mechanistic explanation for why multiple studies have failed to find correlations between longer calendar seasons and increased plant growth \citep{dow2022warm,silvestro2023longer}, and questions previous assertions of sink-source control in experiments \citep{Zani2020,norby2021comment,Zohner2023}. At the same time, our results challenge the decades-old dogma that growth cessation is locally adapted and driven mainly by photoperiod, as we show that variation is driven far more by annual differences compared to population effects. 
 
-\noindent We believe this work would be of broad interest to the readers of \textit{Nature Climate Change}. Our study addresses a timely debate in the field of climate change ecology, and help explain some of the contrasting results of how climate change affects growing season length and productivity. We show how species-levels responses scale up to community level patterns which identifies a clear path forward for improving how phenology is integrated into model of carbon storage. Following the guidelines for a Brief Communication in \textit{Nature Climate Change}, the main text of this manuscript is 1461 words in length and it contains 2 figures. It is co-authored by C.J. Chamberlain, Deirdre Loughnan and E.M. Wolkovich and is not under consideration elsewhere. We hope that you will find it suitable for publication in \textit{Nature Climate Change}, and look forward to hearing from you.\\\
+\noindent We believe this work would be of broad interest to the readers of \textit{Nature Climate Change} and addresses a timely debate in the field of climate change biology. % Our results help explain some of the contrasting results of how climate change affects growing season length and productivity, and our multi-scale approach identifies a clear path forward for improving how phenology is integrated into models of carbon storage. 
+Following the guidelines for a Brief Communication in \textit{Nature Climate Change}, the main text of this manuscript is 1461 words in length and it contains two figures. It is co-authored by C.J. Chamberlain, Deirdre Loughnan and E.M. Wolkovich and is not under consideration elsewhere. We hope that you will find it suitable for publication in \textit{Nature Climate Change}, and look forward to hearing from you.\\\
 \\Sincerely,\\\\\\
 
 \noindent Daniel Buonaiuto\\
